thesis skeleton, iter1

--- a/thesis.tex
+++ b/thesis.tex
@@ -23,14 +23,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TO DO: FILL IN YOUR INFORMATION BELOW - READ THIS SECTION CAREFULLY
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{My Thesis or Dissertation Title}	       % title of thesis/dissertation
-\author{My Name}                % author's name
-\copyrightYear{2012}            % copyright year of your thesis/dissertation
-\graduationMonth{May}           % month of graduation of your thesis/dissertation
-\majorProfessor{My Advisor}	    % advisor's name
+\title{Luminosity Correction for the Pixel Luminosity Telescope}	       % title of thesis/dissertation
+\author{Krishna Thapa}                % author's name
+\copyrightYear{2016}            % copyright year of your thesis/dissertation
+\graduationMonth{December}           % month of graduation of your thesis/dissertation
+\majorProfessor{Stefan M. Spanier}	    % advisor's name
 \keywords{List, Of, Keywords}	% keywords (optional) separated by commas - these are used in the PDF file properties
 \viceProvost{Carolyn R. Hodges} % vice provost name
-\major{Mechanical Engineering}	% major: Mechanical Engineering, Aerospace Engineering, Mathematics...
+\major{High Energy Physics}	% major: Mechanical Engineering, Aerospace Engineering, Mathematics...
 \degree{Master of Science}	    % degree: Doctor of Philosophy, Master of Science, Master of Engineering...
 \college{Engineering}           % college
 \dept{Mechanical, Aerospace and Biomedical Engineering}	% department
@@ -106,10 +106,13 @@
     % INCLUDE THE CHAPTERS STARTING WITH THE NOMENCLATURE IF PRESENT
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \include{front-matter/nomenclature} % OPTIONAL
-    \include{chapters/chapter-1}
-    \include{chapters/chapter-2}
-    \include{chapters/chapter-3}
-    \include{chapters/chapter-4}
+    \include{chapters/ch-1-intro}
+    \include{chapters/ch-2-bkgd}
+    \include{chapters/ch-3-setup}    
+    \include{chapters/ch-4-operations}
+    \include{chapters/ch-5-reconstruction}
+    \include{chapters/ch-6-correction}
+    
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     % BIBLIOGRAPHY
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
