Added committee members

--- a/thesis.tex
+++ b/thesis.tex
@@ -23,7 +23,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TO DO: FILL IN YOUR INFORMATION BELOW - READ THIS SECTION CAREFULLY
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{Luminosity Correction for the Pixel Luminosity Telescope}	       % title of thesis/dissertation
+\title{Correction to Luminosity Measurement for the Pixel Luminosity Telescope at CMS}	       % title of thesis/dissertation
 \author{Krishna Thapa}                % author's name
 \copyrightYear{2016}            % copyright year of your thesis/dissertation
 \graduationMonth{December}           % month of graduation of your thesis/dissertation
@@ -36,10 +36,10 @@
 \dept{Mechanical, Aerospace and Biomedical Engineering}	% department
 \university{The University  of Tennessee, Knoxville}	% school name
 % THIS TEMPLATE ACCOMMODATES UP TO 5 COMMITTEE MEMBERS - ENTER ONLY THE NAMES OF THE MEMBERS ON YOUR COMMITTEE
-\numberOfCommitteeMembers{2} % enter the number of committee members
-\committeeMemberA {Committee Member 1}	% name of first committee member
-\committeeMemberB {Committee Member 2}	% name of second committee member
-\committeeMemberC {Committee Member 3}	% ... you get the trend!
+\numberOfCommitteeMembers{3} % enter the number of committee members
+\committeeMemberA {Dr. Stefan Spanier}	% name of first committee member
+\committeeMemberB {Dr. Marinne Breining}	% name of second committee member
+\committeeMemberC {Dr. Thomas Handler}	% ... you get the trend!
 \committeeMemberD {Committee Member 4}	% if your committee has less than 4 members, you do not need to edit the
 \committeeMemberE {Committee Member 5}  % rest of committee names
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
