added preliminary abstract and some references

--- a/front-matter/abstract.tex
+++ b/front-matter/abstract.tex
@@ -1,2 +1,2 @@
 \chapter*{Abstract}\label{ch:abstract}
-Abstract text goes here...
+The search for and detailed study of new particles and forces with the Compact Muon Solenoid (CMS) detector at the Large Hadron Collider (LHC) of CERN is fundamentally dependent on the precise measurement of the rate at which proton-proton collisions produce any particles, the so-called luminosity. Pixel Luminosity Telescope (PLT), a dedicated online luminoter for the CMS experiment, became operational in 2015. Methods were developed to calculate the corrections to the luminosity measurement of the PLT.
