--- a/references/references-dissertation.bib
+++ b/references/references-dissertation.bib
@@ -1,73 +1,173 @@
 % This file was created with JabRef 2.5.
 % Encoding: Cp1252
 
-@BOOK{Fermi1956,
-  title = {Thermodynamics},
-  publisher = {Dover Publications},
-  year = {1956},
-  author = {Enrico Fermi},
-  pages = {160},
-  timestamp = {2009.01.25}
+ @misc{fig:symMag,
+   author = "symmetrymagazine.org",
+   title = "The skinny on the LHC's heavy ions",
+   year = "2016",
+   url = "http://www.symmetrymagazine.org/breaking/2010/11/05/the-skinny-on-the-lhcs-heavy-ions",
+   note = "[Online; accessed 15-August-2016]",
+ }
+
+@misc{modelFigure,
+  key = {Standard Model Figure},
+  year = {2012},
+  howpublished = {\url{http://sbhep-nt.physics.sunysb.edu/HEP/AcceleratorGroup/index.html}},
+  note = {Accessed: 07-22-2016},
 }
 
-@BOOK{Lamb1895,
-  title = {Hydrodynamics},
-  publisher = {Cambridge University Press},
-  year = {1895},
-  author = {Horace Lamb},
-  address = {Cambridge, UK},
-  timestamp = {2009.02.01}
+ @misc{ wiki:Figure,
+   author = "Wikipedia",
+   title = "Standard Model --- Wikipedia{,} The Free Encyclopedia",
+   year = "2016",
+   url = "https://en.wikipedia.org/w/index.php?title=Standard_Model&oldid=730736480",
+   note = "[Online; accessed 22-July-2016]",
+ }
+ 
+
+
+@misc{CMS:lumi,
+  title="{CMS} Luminosity Public Results",
+  author={{CMS Collaboration}},
+  year={2016},
+  howpublished={\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/LumiPublicResults}},
+  }
+  
+
+@article{lumiConcepts,
+         author  = {Werner Herr and Bruno Muratori},
+         title          = "Concept of luminosity",
+         journal        = "proceedings of CERN Accelerator School",
+         year           = "2003",
 }
 
-@BOOK{liepmann2001,
-  title = {{Elements of gasdynamics}},
-  publisher = {Dover Pubns},
-  year = {2001},
-  author = {Liepmann, H.W. and Roshko, A.},
-  timestamp = {2010.03.28}
+
+
+@article{fill-schemes,
+         author  = {R. Bailey and P. Collier},
+         title          = "Standard filling schemes for the various {LHC} operation modes",
+         journal        = "{LHC} Project Note 323",
+         year           = "2004",
 }
 
-@ARTICLE{Saad2010RSPA,
-  author = {Saad, Tony and Majdalani, Joseph},
-  title = {On the {L}agrangian Optimization of wall-injected flows: from the
-	{Hart-–McClure} potential to the {Taylor-–Culick} rotational motion},
-  journal = {Proceedings of the Royal Society A: Mathematical, Physical and Engineering
-	Science},
-  year = {2010},
-  volume = {466},
-  pages = {331--362},
-  number = {2114},
-  abstract = {The Taylor–Culick solution for a porous cylinder is often used to
-	describe the bulk gas motion in idealized representations of solid
-	rocket motors. However, other approximate solutions may be found
-	that satisfy the same fundamental constraints. In this vein, steeper
-	or smoother profiles may be observed in either experimental or numerical
-	tests, particularly in the presence of intense levels of acoustic
-	energy. In this study, we use the Lagrangian optimization principle
-	to arrive at multiple solutions that can help to explain the practically
-	observed motions. We then search for the extreme states that display
-	either the least or the most kinetic energy. These are derived and
-	found to be dependent on the chamber’s aspect ratio. By assuming
-	a slender case, simple expressions are retrieved from which both
-	the rotational Taylor–Culick and the irrotational Hart–McClure solutions
-	are recovered as special cases. At the outset, a new family of flow
-	approximations is derived extending from purely potential to highly
-	rotational fields. These are constructed, verified and catalogued
-	based on their kinetic energies. To help understand the tendency
-	of a motion to shift energy states, a second law analysis is performed
-	and used to rank these solutions based on their entropy content.
-	Interestingly, the Taylor–Culick profile is found to represent an
-	equilibrium state entailing the most energy and entropy among those
-	starting from the rest. A formal extension of Kelvin’s minimum energy
-	theorem to an open region is then pursued, followed by a direct implementation
-	to the problem at hand. Three other flow motions with open boundaries
-	are examined to further exemplify the application of Kelvin’s extended
-	criteria. Our efforts illustrate the overarching harmony that exists
-	between Lagrange’s minimization principle and Kelvin’s minimum energy
-	theorem; both converge on the potential solution as the least kinetic
-	energy bearer even when the velocity at the open barrier is finite.},
-  doi = {10.1098/rspa.2009.0326},
-  eprint = {http://rspa.royalsocietypublishing.org/content/466/2114/331.full.pdf+html},
-  timestamp = {2010.02.20}
+
+
+@techreport{Dabrowski:1966978,
+      author        = "Dabrowski, Anne",
+      title         = "{Upgrade of the CMS instrumentation for luminosity and
+                       machine induced background measurements}",
+      institution   = "CERN",
+      collaboration = "CMS",
+      address       = "Geneva",
+      number        = "CMS-CR-2014-362",
+      month         = "Oct",
+      year          = "2014",
+      reportNumber  = "CMS-CR-2014-362",
+      url           = "https://cds.cern.ch/record/1966978",
 }
 
+@article{Kornmayer2015,
+  title = "The {CMS} pixel luminosity telescope ",
+  journal = "Nucl. Instrum. Meth. A",
+  year = "2015",
+  note = "",
+  issn = "0168-9002",
+  doi = "10.1016/j.nima.2015.09.104",
+  url = "http://www.sciencedirect.com/science/article/pii/S0168900215011936",
+  author = "A. Kornmayer",
+  keywords = "{CMS}",
+  keywords = "Luminosity",
+  keywords = "Silicon pixel detectors"
+}
+
+@article{Allkofer:2007ek,
+      author         = "Allkofer, Y. and others",
+      title          = "{Design and performance of the silicon sensors for the
+                        CMS barrel pixel detector}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A584",
+      year           = "2008",
+      pages          = "25-41",
+      doi            = "10.1016/j.nima.2007.08.151",
+      eprint         = "physics/0702092",
+      archivePrefix  = "arXiv",
+      primaryClass   = "PHYSICS",
+      SLACcitation   = "%%CITATION = PHYSICS/0702092;%%"
+}
+
+@article{Kastli:2005jj,
+      author         = "K{\"a}stli, H. Chr. and Barbero, M. and Erdmann, W. and
+                        Hormann, Ch. and Horisberger, R. and Kotlinski, D. and
+                        Meier, B.",
+      title          = "{Design and performance of the CMS pixel detector readout
+                        chip}",
+      booktitle      = "{Proceedings,  3rd International Workshop on
+                        Semiconductor Pixel Detectors for Particles and Imaging
+                        (PIXEL 2005)}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A565",
+      year           = "2006",
+      pages          = "188-194",
+      doi            = "10.1016/j.nima.2006.05.038",
+      eprint         = "physics/0511166",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics",
+      SLACcitation   = "%%CITATION = PHYSICS/0511166;%%"
+}
+
+@misc{ROCManual,
+  title = 	 {PSI46 Pixel Chip - External Specification},
+  author = 	 {Kurt Gabathuler},
+  year = 	 {2005},
+  howpublished = "{\url{http://cmspixel.phys.ethz.ch/docs/psi46-readout-chip/psi46v2.pdf}}"
+}
+
+@phdthesis{Barbero:467141,
+      author        = "Barbero, M",
+      title         = "Development of a radiation-hard pixel read out chip with trigger capability",
+      school        = "Basel U.",
+      address       = "Basel",
+      year          = "2003",
+      note           = "\url{https://cds.cern.ch/record/467141}",
+}
+
+@inproceedings{BartzTBM,
+  AUTHOR       = "Bartz, Edward",
+  TITLE        = "The 0.25$\mu$m Token Bit Manager Chip for the {CMS} Pixel Readout",
+  BOOKTITLE    = "11$^\text{th}$ Workshop on Electronics for LHC and Future Experiments",
+  YEAR         = "2005",
+  PUBLISHER    = "CERN",
+  NOTE         = "CERN-2005-011",
+  URL          = "https://cds.cern.ch/record/920426",
+  DOI          = "10.5170/CERN-2005-011.153"
+}
+
+@techreport{vanderMeer:296752,
+      author        = "Van Der Meer, S",
+      title         = "{Calibration of the effective beam height in the ISR}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CERN-ISR-PO-68-31. ISR-PO-68-31",
+      year          = "1968",
+      url           = "https://cds.cern.ch/record/296752",
+}
+
+@techreport{AN-16-004,
+     AUTHOR       = "Jacob Salfeld-Nebgen and Olga Driga and Olena Karacheban and Jessica Leonard and Paul Lujan and Keith Rose and Christopher Palmer",
+     INSTITUTION = "Lumi POG",
+     TITLE        = "{CMS} Analysis of August 2015 {Van der Meer} Scans",
+     TYPE         = "CMS Analysis Note",
+     NUMBER       = "CMS-AN-2016/004",
+     URL          = "http://cms.cern.ch/iCMS/jsp/openfile.jsp?tp=draft&files=AN2016_004_v5.pdf",
+     YEAR         = "2016"
+}
+
+@techreport{AN-16-002_v3,
+     AUTHOR       = "Jacob Salfeld-Nebgen and Olga Driga and Olena Karacheban and Jessica Leonard and Paul Lujan and Keith Rose and Christopher Palmer",
+     INSTITUTION = "Lumi POG",
+     TITLE        = "{PLT} Luminosity Measurement, Corrections, and Systematic Uncertainty for the 2015 Run",
+     TYPE         = "CMS Analysis Note",
+     NUMBER       = "CMS-AN-2016/004",
+     URL          = "http://cms.cern.ch/iCMS/jsp/openfile.jsp?tp=draft&files=AN2016_004_v5.pdf",
+     YEAR         = "2016"
+}
