lumi background section

--- a/references/references-dissertation.bib
+++ b/references/references-dissertation.bib
@@ -171,3 +171,12 @@
      URL          = "http://cms.cern.ch/iCMS/jsp/openfile.jsp?tp=draft&files=AN2016_004_v5.pdf",
      YEAR         = "2016"
 }
+
+@phdthesis{thesis:Tuna,
+  title="Evidence for Decays of the {Higgs} Boson to Tau Leptons at {ATLAS}",
+  author={A. Tuna},
+  year={2015},
+  school={University of Pennsylvania}
+}
+
+
