addition to physics background

--- a/references/references-dissertation.bib
+++ b/references/references-dissertation.bib
@@ -180,3 +180,34 @@
 }
 
 
+@unpublished{Christiane:1260465,
+      author        = "Christiane Lefèvre",
+      title         = "{The CERN accelerator complex. Complexe des
+                       accélérateurs du CERN}",
+      month         = "Dec",
+      year          = "2008",
+      reportNumber  = "CERN-DI-0812015",
+      url           = "https://cds.cern.ch/record/1260465",
+}
+
+
+@misc{wiki:SMfigure,
+ author  = "User:MissMJ, Nasfarley88 and others",
+ title   = "Standard Model of Elementary Particles",
+ year    = "2014",
+ urlseen = "08-12-2016",
+ howpublished = {\url{http://commons.wikimedia.org/wiki/File:Standard_Model_of_Elementary_Particles_modified_version.svg}}
+}
+
+
+@phdthesis{White:1308187,
+      author        = "White, Simon Mathieu and Burkhardt, H and Puzo, P",
+      title         = "{Determination of the Absolute Luminosity at the LHC}",
+      school        = "Orsay, Université Paris-Sud 11",
+      address       = "Orsay",
+      year          = "2010",
+      reportNumber  = "CERN-THESIS-2010-139",
+      url           = "https://cds.cern.ch/record/1308187",
+      note          = "Presented on 11 Oct 2010",
+}
+
