added exp. setup, more refs, and plots

--- a/references/references-dissertation.bib
+++ b/references/references-dissertation.bib
@@ -162,13 +162,12 @@
      YEAR         = "2016"
 }
 
-@techreport{AN-16-002_v3,
-     AUTHOR       = "Jacob Salfeld-Nebgen and Olga Driga and Olena Karacheban and Jessica Leonard and Paul Lujan and Keith Rose and Christopher Palmer",
-     INSTITUTION = "Lumi POG",
+@techreport{PLT:AN-16-002_v3,
+     AUTHOR       = "Paul Lujan and Grant Riley and Keith Rose and Stefan Spanier and Krishna Thapa",
+     INSTITUTION = "BRIL PLT",     
      TITLE        = "{PLT} Luminosity Measurement, Corrections, and Systematic Uncertainty for the 2015 Run",
      TYPE         = "CMS Analysis Note",
-     NUMBER       = "CMS-AN-2016/004",
-     URL          = "http://cms.cern.ch/iCMS/jsp/openfile.jsp?tp=draft&files=AN2016_004_v5.pdf",
+     NUMBER       = "CMS-AN-2016/002",
      YEAR         = "2016"
 }
 
@@ -211,3 +210,148 @@
       note          = "Presented on 11 Oct 2010",
 }
 
+
+@techreport{Collaboration:1433717,
+      author        = "CMS Collaboration",
+      title         = "Detector Drawings",
+      year          = "2012",
+      reportNumber  = "CMS-PHO-GEN-2012-002",
+      howpublished  = {\url{http://cds.cern.ch/record/1433717}},
+      note          = "CMS Collection.",
+}
+
+
+@Article{Chatrchyan:2008,
+     author    = "CMS Collaboration",
+     collaboration = "CMS",
+     title     = "The {CMS} experiment at the {CERN} {LHC}",
+     journal   = "JINST",
+     volume    = "3",
+     year      = "2008",
+     pages     = "S08004",
+     doi       = "10.1088/1748-0221/3/08/S08004",
+     SLACcitation  = "%%CITATION = JINST,3,S08004;%%"
+}
+
+
+@book{cms:solenoid,
+      title         = "The {CMS} magnet project: Technical Design Report",
+      publisher     = "CERN",
+      author = {CMS Collaboration},
+      address       = "Geneva",
+      series        = "Technical Design Report CMS",
+      year          = "1997",
+      howpublished   = {\url{https://cds.cern.ch/record/331056}},
+}
+
+
+ @misc{fig:CMSDetector,
+   author = "Tai Sakuma",
+   title = "3D SketchUp images of the CMS detector (120918)",
+   year = "2016",
+   url = "https://cms-docdb.cern.ch/cgi-bin/PublicDocDB/ShowDocument?docid=11514",
+   note = "CMS Document 11514-v3",
+ }
+
+@article{TRK-11-001,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Description and performance of track and
+                        primary-vertex reconstruction with the CMS
+                        tracker}",
+      collaboration  = "CMS",
+      journal           = "JINST",
+      volume          = "9",
+      pages           = "P10009",
+      doi            = "10.1088/1748-0221/9/10/P10009",
+      year           = "2014",
+      eprint         = "1405.6569",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "CMS-TRK-11-001, CERN-PH-EP-2014-070",
+      SLACcitation   = "%%CITATION = ARXIV:1405.6569;%%",
+}
+
+
+@article{Pernicka:1091743,
+      author        = "Pernicka, M and Kotlinski, D and Johns, W and Steininger,
+                       H and Schmid, H",
+      title         = "{The CMS Pixel FED}",
+      year          = "2007",
+      url           = "https://cds.cern.ch/record/1091743",
+}
+
+@article{Salam:1968,
+      author         = "A. Salam",
+      title          = "Weak and Electromagnetic Interactions",
+      journal        = "Conf.Proc.",
+      volume         = "C680519",
+      pages          = "367-377",
+      year           = "1968",
+      SLACcitation   = "%%CITATION = CONFP,C680519,367;%%",
+}
+
+
+@article{Weinberg:1967,
+  title = "A Model of Leptons",
+  author = {S. Weinberg},
+  journal = {Phys. Rev. Lett.},
+  volume = {19},
+  issue = {21},
+  pages = {1264--1266},
+  numpages = {0},
+  year = {1967},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.19.1264},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.19.1264}
+}
+
+
+@article{Glashow:1961,
+         author         = "S. L. Glashow",
+         title          = "Partial symmetries of weak interactions",
+         journal        = "Nucl.Phys.",
+         volume         = "22",
+         pages          = "579-588",
+         doi            = "10.1016/0029-5582(61)90469-2",
+         year           = "1961",
+}
+
+
+
+@misc{TTCI,
+  key = {TTCci User Guide},
+  year = {2007},
+  howpublished = {\url{http://cmsdoc.cern.ch/cms/TRIDAS/ttc/modules/ttcci/}},
+  note = {Accessed: 09-26-2016},
+}
+
+@article{PhysRevLett.13.321,
+  title = {Broken Symmetry and the Mass of Gauge Vector Mesons},
+  author = {Englert, F. and Brout, R.},
+  journal = {Phys. Rev. Lett.},
+  volume = {13},
+  issue = {9},
+  pages = {321--323},
+  numpages = {0},
+  year = {1964},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.13.321},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.13.321}
+}
+
+
+@article{PhysRevLett.13.508,
+  title = {Broken Symmetries and the Masses of Gauge Bosons},
+  author = {Higgs, Peter W.},
+  journal = {Phys. Rev. Lett.},
+  volume = {13},
+  issue = {16},
+  pages = {508--509},
+  numpages = {0},
+  year = {1964},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.13.508},
+  url = {http://link.aps.org/doi/10.1103/PhysRevLett.13.508}
+}
