--- a/thesis.tex
+++ b/thesis.tex
@@ -28,12 +28,12 @@
 \copyrightYear{2016}            % copyright year of your thesis/dissertation
 \graduationMonth{December}           % month of graduation of your thesis/dissertation
 \majorProfessor{Stefan M. Spanier}	    % advisor's name
-\keywords{List, Of, Keywords}	% keywords (optional) separated by commas - these are used in the PDF file properties
+\keywords{Physics, Particle, CMS, Detector, Pixel, PLT, thesis, luminosity, correction, reconstruction}	% keywords (optional) separated by commas - these are used in the PDF file properties
 \viceProvost{Carolyn R. Hodges} % vice provost name
 \major{High Energy Physics}	% major: Mechanical Engineering, Aerospace Engineering, Mathematics...
 \degree{Master of Science}	    % degree: Doctor of Philosophy, Master of Science, Master of Engineering...
-\college{Engineering}           % college
-\dept{Mechanical, Aerospace and Biomedical Engineering}	% department
+\college{Arts \& Sciences}           % college
+\dept{Department of Physics and Astronomy}	% department
 \university{The University  of Tennessee, Knoxville}	% school name
 % THIS TEMPLATE ACCOMMODATES UP TO 5 COMMITTEE MEMBERS - ENTER ONLY THE NAMES OF THE MEMBERS ON YOUR COMMITTEE
 \numberOfCommitteeMembers{3} % enter the number of committee members
@@ -58,6 +58,7 @@
 \usepackage[config, labelfont={bf}]{caption,subfig} % nice sub figures
 \usepackage{mathrsfs}                   % additional math scripts
 
+\usepackage{physics}
 
 % does not recognize png extension, sometimes
 %\usepackage{graphicx}
@@ -92,67 +93,46 @@
 %\lstset{escapechar=@,style=customc}
 
 %http://tex.stackexchange.com/questions/81834/whats-the-best-way-to-typeset-c-codes-in-latex
+
+
+\usepackage{listings}
+\usepackage{color}
+ 
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
 \definecolor{listinggray}{gray}{0.9}
 \definecolor{lbcolor}{rgb}{0.9,0.9,0.9}
-\lstset{
-backgroundcolor=\color{lbcolor},
-    tabsize=4,    
-%   rulecolor=,
-    language=[GNU]C++,
-        basicstyle=\scriptsize,
-        upquote=true,
-        aboveskip={1.5\baselineskip},
-        columns=fixed,
-        showstringspaces=false,
-        extendedchars=false,
-        breaklines=true,
-        prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-        frame=single,
-%        numbers=left,
-        showtabs=false,
-        showspaces=false,
-        showstringspaces=false,
-        identifierstyle=\ttfamily,
-        keywordstyle=\color[rgb]{0,0,1},
-        commentstyle=\color[rgb]{0.026,0.112,0.095},
-        stringstyle=\color[rgb]{0.627,0.126,0.941},
-%        numberstyle=\color[rgb]{0.205, 0.142, 0.73},
-%        \lstdefinestyle{C++}{language=C++,style=numbers}?.
+ 
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{blue},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+%    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
 }
-\lstset{
-  backgroundcolor=\color{lbcolor},
-   tabsize=4,
-  language=C++,
-  captionpos=b,
-  tabsize=3,
-  frame=lines,
-%  numbers=left,
-%  numberstyle=\tiny,
-%  numbersep=5pt,
-  breaklines=true,
-  showstringspaces=false,
-  basicstyle=\footnotesize,
-%  identifierstyle=\color{magenta},
-  keywordstyle=\color[rgb]{0,0,1},
-  commentstyle=\color{Darkgreen},
-  stringstyle=\color{red}
-  }
-  
-  \lstdefinestyle{customc}{
-  belowcaptionskip=1\baselineskip,
-  breaklines=true,
-  frame=L,
-  xleftmargin=\parindent,
-  language=C,
-  showstringspaces=false,
-  basicstyle=\footnotesize\ttfamily,
-  keywordstyle=\bfseries\color{green!40!black},
-  commentstyle=\itshape\color{purple!40!black},
-  identifierstyle=\color{blue},
-  stringstyle=\color{orange},
-}
-\lstset{escapechar=@,style=customc}  
+ 
+\lstset{style=mystyle}
+%highmart
+%\usepackage{fontspec}
+%\usepackage[T1]{fontenc} 
+%\renewcommand*{\rmdefault}{\sfdefault}
 
+
+%\usepackage{devanagari}
 
 %%% PACKAGES THAT ARE PRELOADED WITH THE CLASS ARE: amsmath,amsthm,amssymb,setspace,geometry,hyperref,and color
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -203,13 +183,19 @@ backgroundcolor=\color{lbcolor},
     % INCLUDE THE CHAPTERS STARTING WITH THE NOMENCLATURE IF PRESENT
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \include{front-matter/nomenclature} % OPTIONAL
-    \include{chapters/ch-1-intro}
-    \include{chapters/ch-2-bkgd}
-    \include{chapters/ch-3-setup}    
-    \include{chapters/ch-4-operations}
-    \include{chapters/ch-5-reconstruction}
-    \include{chapters/ch-6-correction}
     
+    %% fix the nomenclature issue
+    %%
+        \include{chapters/ch-1-intro}
+%        \include{chapters/luminosity}        
+        \include{chapters/ch-2-bkgd}
+        \include{chapters/ch-3-setup}
+%        \include{chapters/ch-4-operations}
+%        \include{chapters/ch-5-reconstruction}        
+%        \include{chapters/ch-6-correction}
+
+
+
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     % BIBLIOGRAPHY
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -221,7 +207,9 @@ backgroundcolor=\color{lbcolor},
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \makeAppendixPage   % make the appendix title page - can be edited in ut-thesis-template.tex
     \appendix
-    \include{back-matter/appendix-1}
+    \include{back-matter/appendix-1} %uncomment for appendix
+    \include{back-matter/appendix-2} %uncomment for appendix
+    
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     % A VITA IS REQUIRED
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
