--- a/front-matter/abstract.tex
+++ b/front-matter/abstract.tex
@@ -1,6 +1,8 @@
 \chapter*{Abstract}\label{ch:abstract}
 The search for and detailed study of new particles and forces with the Compact Muon Solenoid (CMS) detector at the Large Hadron Collider (LHC) of CERN is fundamentally dependent on the precise measurement of the rate at which proton-proton collisions produce any particles, the so-called luminosity. 
 Therefore, a new detector, the Pixel Luminosity Telescope (PLT), dedicated to measure the luminosity at high precision was added to the CMS experiment in 2015.
-It measures the inclusive charged particle production from each collision of proton bunches in the LHC. The instrument provides measurements of particle trajectories which allows to distinguish particles originating from proton proton collisions and other sources that accidentally are created as luminosity contribution.
+It measures the inclusive charged particle production from each collision of proton bunches in the LHC. 
+%The instrument provides measurements of particle trajectories which allows to distinguish particles originating from proton proton collisions and other sources that accidentally are created as luminosity contribution.
+Additional charged particles which are observed by the instrument but produced from sources other than collisions are characterized by measurements of particle trajectories and subtracted from the luminosity.
 Methods were developed to calculate the corrections to the luminosity measurement of the PLT.
 %The Pixel Luminosity Telescope (PLT), a dedicated online luminometer for the CMS experiment, became operational in 2015. Methods were developed to calculate the corrections to the luminosity measurement of the PLT.
