--- a/thesis.tex
+++ b/thesis.tex
@@ -3,7 +3,7 @@
 % It serves as a guideline and constitutes a basic structure for a
 % thesis/dissertation. The user assumes full responsibility for formatting
 % and typesetting their document and for verifying that all the thesis
-% requirements set by the University of Tennessee are met. Please refer to the most
+% requiremoents set by the University of Tennessee are met. Please refer to the most
 % recent UT thesis guide (http://web.utk.edu/~thesis/thesisresources.shtml)
 % or contact the thesis consultant (http://web.utk.edu/~thesis/).
 % Please report any bugs to the thesis consultant.
@@ -29,7 +29,7 @@
 \graduationMonth{December}           % month of graduation of your thesis/dissertation
 \majorProfessor{Stefan M. Spanier}	    % advisor's name
 \keywords{Physics, Particle, CMS, Detector, Pixel, PLT, thesis, luminosity, correction, reconstruction}	% keywords (optional) separated by commas - these are used in the PDF file properties
-\viceProvost{Carolyn R. Hodges} % vice provost name
+\viceProvost{Dixie L. Thompson} % vice provost name
 \major{High Energy Physics}	% major: Mechanical Engineering, Aerospace Engineering, Mathematics...
 \degree{Master of Science}	    % degree: Doctor of Philosophy, Master of Science, Master of Engineering...
 \college{Arts \& Sciences}           % college
@@ -190,9 +190,9 @@
 %        \include{chapters/luminosity}        
         \include{chapters/ch-2-bkgd}
         \include{chapters/ch-3-setup}
-%        \include{chapters/ch-4-operations}
-%        \include{chapters/ch-5-reconstruction}        
-%        \include{chapters/ch-6-correction}
+        \include{chapters/ch-4-operations}
+        \include{chapters/ch-5-reconstruction}        
+        \include{chapters/ch-6-correction}
 
 
 
