--- a/back-matter/vita.tex
+++ b/back-matter/vita.tex
@@ -1,2 +1,2 @@
 \chapter*{Vita} \label{ch:vita}
-Vita goes here...
+Krishna Thapa was born in Baglung, Nepal to the parents Pahal and Kalpana Thapa. He has two younger siblings, Pushpa and Yogendra. He attended Texas A\&M University in College Station, TX for his Bachelors in physics. Krishna graduated with masters in Physics from the University of Tennessee in Fall, 2016.
