added some front matter

--- a/front-matter/acknowledgements.tex
+++ b/front-matter/acknowledgements.tex
@@ -1,2 +1,19 @@
 \chapter*{Acknowledgements}
-I would like to thank...
+
+\noindent
+I would like to thank my advisor, Dr. Stefan Spanier, for allowing me to participate in this part of the CMS collaboration. I learned a great deal from you, not only about physics but also on how to go about solving problems.
+
+
+\bigskip
+\noindent
+Thanks to Mark Foerster for helping me get acquainted with the BRILDAQ infrastructure. Thanks to Grant Riley, who helped me tremendously answering my questions about detectors and ROOT. Thanks to Keith Rose for helping me set up codes, and also for going through the rough draft of my thesis. Thanks to Joe for going through the analysis code and calculating corrections with new data. 
+
+
+\bigskip
+\noindent
+Thanks to Paul Lujan for helping me make the dip processor robust by providing helpful feedbacks, and also for providing me the references for the trigger system. Thanks to Anne Dabrowski, David Stickland, Chris Palmer, Arkady Lokhovitskiy and others at the BRIL team for helping me contribute to the development of analytical tools.
+
+%\bigskip
+
+%\noindent
+%Thanks to Dr. Breining for providing comments to my early draft.
