--- a/front-matter/nomenclature.tex
+++ b/front-matter/nomenclature.tex
@@ -8,3 +8,5 @@
 \nomenclature{$u_{\theta}$}{Tangential velocity}%
 \nomenclature{$u_z$}{Axial velocity}%
 \nomenclature{$p$}{Pressure} 
+
+\nomenclature{$\mathcal{L}$}{Luminosity} 
