--- a/front-matter/quote.tex
+++ b/front-matter/quote.tex
@@ -1,2 +1,9 @@
 \chapter*{}
-{\it Some quotation...}
+{\begin{figure}[htbp!]
+\centering
+  \includegraphics[width=0.6\textwidth]%
+  {figures/display/quote.pdf}
+\end{figure}
+
+%{\dn \dnpennepali \large Krishna} 
+%????
