--- a/references/references-dissertation.bib
+++ b/references/references-dissertation.bib
@@ -80,6 +80,16 @@
   keywords = "Silicon pixel detectors"
 }
 
+
+@article{MFoster2015,
+  title = "The CMS Pixel Luminosity Telescope Browser Interface",
+  year = "2015",
+  url = "http://trace.tennessee.edu/cgi/viewcontent.cgi?article=4272&context=utk_gradthes",
+  author = "Mark Miller Foerster",
+  keywords = "{CMS}",
+  keywords = "Luminosity"
+}
+
 @article{Allkofer:2007ek,
       author         = "Allkofer, Y. and others",
       title          = "{Design and performance of the silicon sensors for the
@@ -355,3 +365,48 @@
   doi = {10.1103/PhysRevLett.13.508},
   url = {http://link.aps.org/doi/10.1103/PhysRevLett.13.508}
 }
+
+@techreport{Hall-Wilton:1291202,
+      author        = "Hall-Wilton, Richard and Loos, Robert and Ryjov, Vladimir
+                       and Pernicka, Manfred and Schmied, S and Steninger, H and
+                       Halyo, Valerie and Harrop, B and Hunt, Adam and Marlow,
+                       Daniel and Sands, B and Stickland, David and Atramentov,
+                       Oleksiy and Bartz, Ed and Doroshenko, John and Gershtein,
+                       Yuri and Hits, Dmitry and Schnetzer, Steve and Stone,
+                       Robert and Butler, Philip H and Lansley, Stuart and
+                       Rodrigues, N and Bugg, William and Hollingsworth, Matthew
+                       and Spanier, Stefan and Johns, Willard",
+      title         = "{Results from a Beam Test of a Prototype PLT Diamond Pixel
+                       Telescope}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2009-022. 1",
+      month         = "Aug",
+      year          = "2009",
+      reportNumber  = "CMS-NOTE-2009-022",
+      url           = "https://cds.cern.ch/record/1291202",
+}
+
+
+@article{Rossi2003239,
+title = "Pixel detectors hybridisation ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "501",
+number = "1",
+pages = "239 - 244",
+year = "2003",
+note = "Proceedings of the 10th International Workshop on Vertex Detectors ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/S0168-9002(02)02041-7",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900202020417",
+author = "Leonardo Rossi",
+keywords = "Pixel detector",
+keywords = "Hybridisation",
+keywords = "Bump bonding",
+keywords = "Flip-chip",
+keywords = "Atlas",
+keywords = "CMS",
+keywords = "RD19 "
+}
+
